SKILL.md: add a reader-facing How-it-works section (demystify the scripts)
The execution-discipline section deliberately tells the executor not to inspect the
bump scripts, which left a human reader with opaque black boxes. Add one compact
reference section (drawn straight from the .sh files) that spells out the linear
per-hop pipeline (lombok-safe-bump -> public migrate recipes -> deterministic compat
layer, with the JDK used at each step) and the two branch layers: in-script (JDK per
step only) vs the failure-table escalations (sb1_to_sb2 / sb2_to_sb3 / per-symptom
rows). No behavior change; documentation only.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>